Fixed an issue with the menu on smaller devices

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -107,7 +107,10 @@
     padding-right: $sp-5;
   }
 
-  width: $nav-width;
+  width: 100%;
+  @include mq(md){
+    width: $nav-width;
+  }
 }
 
 .navigation {
